--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
             <h2 class="font-medium text-[16px] max-w-[80%] md:max-w-[50%] md:text-[20px">Send spontaneous photos to your friends and see theirs instantly.</h2>
 
-            <button class="border-2 border-[#191310] px-5 py-2 font-medium text-[14px] rounded-xl hover:px-6 hover:py-2 hover:text-[16px] hover:duration-200">
+            <button class="border-2 border-[#191310] px-5 py-2 font-medium text-[14px] rounded-xl hover:px-6 hover:py-2 hover:text-[16px] transition-all">
                 <a href="#">Download Free</a>
             </button>
 
